...
  if (title.length > 30) {
    return `${title.slice(0, 30)}...`;
  }
  return title;
};

const Explore = () => {
  const refreshing = useAppSelector(getIsRefreshing);

  const { bottom } = useSafeAreaInsets();

  const dispatch = useAppDispatch();

  const {
...
